@@ -3522,6 +3522,105 @@ annotation|@
 name|Test
 specifier|public
 name|void
+name|testPageSizeOneScalarAsArray
+parameter_list|()
+block|{
+name|List
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|a
+init|=
+name|ObjectSelect
+operator|.
+name|query
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+operator|.
+name|columns
+argument_list|(
+name|Artist
+operator|.
+name|ARTIST_NAME
+operator|.
+name|trim
+argument_list|()
+argument_list|)
+operator|.
+name|pageSize
+argument_list|(
+literal|10
+argument_list|)
+operator|.
+name|select
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|a
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|20
+argument_list|,
+name|a
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|int
+name|idx
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|Object
+index|[]
+name|next
+range|:
+name|a
+control|)
+block|{
+name|assertNotNull
+argument_list|(
+literal|""
+operator|+
+name|idx
+argument_list|,
+name|next
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|next
+index|[
+literal|0
+index|]
+operator|instanceof
+name|String
+argument_list|)
+expr_stmt|;
+name|idx
+operator|++
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
 name|testPageSizeScalars
 parameter_list|()
 block|{
@@ -3735,6 +3834,103 @@ block|{
 name|assertNotNull
 argument_list|(
 name|next
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testPageSizeOneObjectAsArray
+parameter_list|()
+block|{
+name|Property
+argument_list|<
+name|Artist
+argument_list|>
+name|artistFull
+init|=
+name|Property
+operator|.
+name|createSelf
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|a
+init|=
+name|ObjectSelect
+operator|.
+name|query
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+operator|.
+name|columns
+argument_list|(
+name|artistFull
+argument_list|)
+operator|.
+name|pageSize
+argument_list|(
+literal|10
+argument_list|)
+operator|.
+name|select
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|a
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|20
+argument_list|,
+name|a
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Object
+index|[]
+name|next
+range|:
+name|a
+control|)
+block|{
+name|assertNotNull
+argument_list|(
+name|next
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|next
+index|[
+literal|0
+index|]
+operator|instanceof
+name|Artist
 argument_list|)
 expr_stmt|;
 block|}
